syntax = "proto3";
package com.solutionarchitects;


message Price{
	double price=1;
}

message Level{
	double price=1;
	int32 askSize=2;
	int32 bidSize=3;
}

message PriceLevel {
	double price=1;
	int32 size=2;
}

message MarketDataMessage {

	repeated Level PriceLevels=1;
	double ask0=2;
	double ask1=3;
	double ask2=4;
	double ask3=5;
	double ask4=6;

	double bid0=7;
	double bid1=8;
	double bid2=9;
	double bid3=11;
	double bid4=12;

	int32 askSize0=13;
	int32 askSize1=14;
	int32 askSize2=15;
	int32 askSize3=16;
	int32 askSize4=17;

	int32 bidSize0=18;
	int32 bidSize1=19;
	int32 bidSize2=20;
	int32 bidSize3=21;
	int32 bidSize4=22;

	string recordId=23;
	string exchange=24;
	string symbol=25;

	repeated double askPrices=26 [packed=false];

	
	
}


message NewMarketDataMessage {
	repeated PriceLevel AskLevels=1;
	repeated PriceLevel BidLevels=2;
	string recordId=23;
	string exchange=24;
	string symbol=25;
}

